--- a/templates/api/emails/kidscoding.html
+++ b/templates/api/emails/kidscoding.html
@@ -1,12 +1,8 @@
-{% block subject %} Kids Coding - Anchorsoft Academy {% endblock subject %} {%
-block html_body %}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Kids Coding - Anchorsoft Academy </title>
+{% block subject %} 
+Kids Coding - Anchorsoft Academy
+ {% endblock subject %} 
+
+{% block html_body %}
     <style type="text/css">
       table {
         border-spacing: 0;
@@ -60,31 +56,10 @@ block html_body %}
       }
     </style>
 
-    <!--[if (gte mso 9)|(IE)]>
-      <style type="text/css">
-        table {
-          border-collapse: collapse !important;
-        }
-      </style>
-    <![endif]-->
   </head>
   <body
     style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
   >
-    <!--[if (gte mso 9)|(IE)]>
-      <style type="text/css">
-        body {
-          background-color: #f0ffff !important;
-        }
-        body,
-        table,
-        td,
-        p,
-        a {
-          font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif !important;
-        }
-      </style>
-    <![endif]-->
 
     <center
       style="
@@ -95,23 +70,7 @@ block html_body %}
       "
     >
       <div style="max-width: 600px; background-color: #244d68">
-        <div
-          style="
-            font-size: 0px;
-            color: #fafdfe;
-            line-height: 1px;
-            mso-line-height-rule: exactly;
-            display: none;
-            max-width: 0px;
-            max-height: 0px;
-            opacity: 0;
-            overflow: hidden;
-            mso-hide: all;
-          "
-        >
-          Kids Coding
-        </div>
-
+       
         <table
           align="center"
           style="
@@ -509,6 +468,4 @@ block html_body %}
       </div>
     </center>
   </body>
-</html>
-
 {% endblock html_body %}
