--- a/templates/api/email_response/interested_emails.html
+++ b/templates/api/email_response/interested_emails.html
@@ -214,8 +214,7 @@
                       margin-top: -50px;
                     "
                   >
-                    Thank you for enrolling for {{course}} schedule for
-                    {{startdate}}. We would get in touch with you for further
+                    Thank you for enrolling for {{course}}. We would get in touch with you for further
                     information
                   </p>
                 </td>
@@ -250,35 +249,7 @@
                 </td>
               </tr>
 
-              <!-- START DATE -->
-              <tr>
-                <td
-                  style="
-                    padding: 0;
-                    padding-bottom: 20px;
-                    background-color: white;
-                  "
-                >
-                  <table
-                    width="100%"
-                    style="border-spacing: 0"
-                    role="presentation"
-                  >
-                    <tr>
-                      <td style="padding-bottom: 10px">
-                        <p style="color: #404141">
-                          <span style="font-weight: 700">Starting Date:</span>
-                          <span>{{ startdate }}</span>
-                        </p>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td style="height: 1px; background-color: #404141"></td>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
-
+              
               <!-- MOBILE -->
               <tr>
                 <td
