--- a/templates/api/email_response/virtual_class.html
+++ b/templates/api/email_response/virtual_class.html
@@ -212,6 +212,35 @@
 									</td>
 								</tr>
 
+								<!-- COUNTRY OF RESIDENT -->
+								<tr>
+									<td
+									  style="
+										padding: 0;
+										padding-bottom: 20px;
+										background-color: white;
+									  "
+									>
+									  <table
+										width="100%"
+										style="border-spacing: 0"
+										role="presentation"
+									  >
+										<tr>
+										  <td style=" padding-bottom:10px">
+											<p style="color: #404141">
+											  <span style="font-weight: 700">Country of Resident:</span>
+											  <span>{{ country_of_residence }}</span>
+											</p>
+										  </td>
+										</tr>
+										<tr>
+										  <td style="height: 1px; background-color: #404141"></td>
+										</tr>
+									  </table>
+									</td>
+								  </tr>
+
 									<!-- NAME -->
 				<tr>
 					<td
