--- a/templates/api/email_response/financial_aid.html
+++ b/templates/api/email_response/financial_aid.html
@@ -251,6 +251,115 @@ Financial Aid- Anchorsoft Academy
               </table>
             </td>
           </tr>
+
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Course of Interest:</span>
+                      <span>{{ course }}</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Relationship with Guarantor:</span>
+                      <span>{{ relationship_with_guarantor }}</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Residential Address:</span>
+                      <span>{{ residential_address }}</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Guarantor Full Name:</span>
+                      <span>{{ guarantor_full_name }}</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Guarantor Residential Contact Address:</span>
+                      <span>{{ guarantor_residential_contact_address }}</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Guarantor Mobile:</span>
+                      <span>{{ guarantor_mobile }}</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
           <tr>
             <td style="padding: 20px 0; background-color: #244d68">
               <table width="100%" style="border-spacing: 0" role="presentation">
