--- a/templates/api/email_response/sponsorship.html
+++ b/templates/api/email_response/sponsorship.html
@@ -284,8 +284,8 @@ style="margin: 0; padding: 0; min-width: 100%; background-color: #f0ffff"
                         <tr>
                           <td style=" padding-bottom: 10px">
                             <p style="color: #404141">
-                              <span style="font-weight: 700">NUmber of Student:</span>
-                              <span>{{ number_of_students }}</span>
+                              <span style="font-weight: 700">Number of Student:</span>
+                              <span>{{ number_of_student }}</span>
                             </p>
                           </td>
                         </tr>
