--- a/templates/api/email_response/financial_aid.html
+++ b/templates/api/email_response/financial_aid.html
@@ -269,43 +269,7 @@ Financial Aid - Anchorsoft Academy
               </table>
             </td>
           </tr>
-          
-          <tr>
-            <td style="padding: 0 20px; background-color: white">
-              <table width="100%" style="border-spacing: 0" role="presentation">
-                <tr>
-                  <td style="padding-top: 20px; padding-bottom: 10px">
-                    <p style="color: #404141">
-                      <span style="font-weight: 700">Relationship with Guarantor:</span>
-                      <span>{{ relationship_with_guarantor }}</span>
-                    </p>
-                  </td>
-                </tr>
-                <tr>
-                  <td style="height: 1px; background-color: #404141"></td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding: 0 20px; background-color: white">
-              <table width="100%" style="border-spacing: 0" role="presentation">
-                <tr>
-                  <td style="padding-top: 20px; padding-bottom: 10px">
-                    <p style="color: #404141">
-                      <span style="font-weight: 700">Residential Address:</span>
-                      <span>{{ residential_address }}</span>
-                    </p>
-                  </td>
-                </tr>
-                <tr>
-                  <td style="height: 1px; background-color: #404141"></td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-
+          <!-- GUARANTOR FULL NAME -->
           <tr>
             <td style="padding: 0 20px; background-color: white">
               <table width="100%" style="border-spacing: 0" role="presentation">
@@ -323,7 +287,44 @@ Financial Aid - Anchorsoft Academy
               </table>
             </td>
           </tr>
-
+            <!-- RELATIONSHIP WITH Guarantor -->
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Relationship with Guarantor:</span>
+                      <span>{{ relationship_with_guarantor }}</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+            <!-- RESIDENTIAL ADDRESS  -->
+          <tr>
+            <td style="padding: 0 20px; background-color: white">
+              <table width="100%" style="border-spacing: 0" role="presentation">
+                <tr>
+                  <td style="padding-top: 20px; padding-bottom: 10px">
+                    <p style="color: #404141">
+                      <span style="font-weight: 700">Residential Address:</span>
+                      <span>{{ residential_address }}</span>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="height: 1px; background-color: #404141"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          
+          <!-- GUARANTOR RESIDENTIAL CONTANCT ADDRESS -->
           <tr>
             <td style="padding: 0 20px; background-color: white">
               <table width="100%" style="border-spacing: 0" role="presentation">
@@ -341,7 +342,7 @@ Financial Aid - Anchorsoft Academy
               </table>
             </td>
           </tr>
-
+          <!-- GUARANTOR MOBILE NUMBER  -->
           <tr>
             <td style="padding: 0 20px; background-color: white">
               <table width="100%" style="border-spacing: 0" role="presentation">
